// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Collection Horizontal render 1`] = `
<ul
  class="sc-fzozJi Zwgbw horizontal"
  data-testid="timeline-collection"
>
  <li
    class="sc-fzoLsD iwRVyL horizontal "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-Axmtr jAsnA horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxiKw jUuDCK"
          title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
        >
          June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL horizontal "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-Axmtr jAsnA horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxiKw jUuDCK"
          title="July 28, 1914"
        >
          July 28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL horizontal "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-Axmtr jAsnA horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxiKw jUuDCK"
          title="August 1–28, 1914"
        >
          August 1–28, 1914
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL horizontal "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE horizontal"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA horizontal in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-Axmtr jAsnA horizontal undefined"
        data-testid="timeline-title"
      >
        <div
          class="sc-AxiKw jUuDCK"
          title="September 6, 1914"
        >
          September 6, 1914
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Tree render 1`] = `
<ul
  class="sc-fzozJi Zwgbw tree"
  data-testid="timeline-collection"
>
  <li
    class="sc-fzoLsD iwRVyL tree "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL tree "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL tree "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL tree "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE tree"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA tree in-active"
          data-testid="timeline-circle"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`Test Collection Vertical render 1`] = `
<ul
  class="sc-fzozJi Zwgbw vertical"
  data-testid="timeline-collection"
>
  <li
    class="sc-fzoLsD iwRVyL vertical "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-AxmLO gXXkzo vertical"
      >
        <div
          class="sc-Axmtr jAsnA vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxiKw jUuDCK"
            title="June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914"
          >
            June 28, 1914 June 28, 1914 June 28, 1914June 28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm eEVtq"
        >
          <span
            class="sc-AxirZ izgUJV"
          >
            Archduke Franz Ferdinand of Austria and his wife, Sophie, are assassinated by a Bosnian Serb nationalist in Sarajevo.
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL vertical "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-AxmLO gXXkzo vertical"
      >
        <div
          class="sc-Axmtr jAsnA vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxiKw jUuDCK"
            title="July 28, 1914"
          >
            July 28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm eEVtq"
        >
          <span
            class="sc-AxirZ izgUJV"
          >
            World War I begins when Austria-Hungary declares war on Serbia.
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL vertical "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-AxmLO gXXkzo vertical"
      >
        <div
          class="sc-Axmtr jAsnA vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxiKw jUuDCK"
            title="August 1–28, 1914"
          >
            August 1–28, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm eEVtq"
        >
          <span
            class="sc-AxirZ izgUJV"
          >
            Germany declares war on Russia, France, and Belgium. Britain declares war on Germany.
    Austria declares war on Russia. Montenegro declares war on Austria. France declares war on Austria.
    Britain declares war on Austria. Montenegro declares war on Germany. Japan declares war on Germany. Austria declares war on Belgium.
          </span>
        </div>
      </div>
    </div>
  </li>
  <li
    class="sc-fzoLsD iwRVyL vertical "
    width="250"
  >
    <div
      class="sc-AxhCb IpIEE vertical"
      data-testid="timeline-item"
    >
      <div
        class="sc-AxgMl hIEZtR"
      >
        <div
          class="sc-AxheI dRuAGA vertical in-active"
          data-testid="timeline-circle"
        />
      </div>
      <div
        class="sc-AxmLO gXXkzo vertical"
      >
        <div
          class="sc-Axmtr jAsnA vertical undefined"
          data-testid="timeline-title"
        >
          <div
            class="sc-AxiKw jUuDCK"
            title="September 6, 1914"
          >
            September 6, 1914
          </div>
        </div>
        <div
          class="sc-AxjAm eEVtq"
        >
          <span
            class="sc-AxirZ izgUJV"
          >
            First Battle of the Marne begins. The Germans had advanced to within 30 miles of Paris, but over the next two days, the French are reinforced by 6,000 infantrymen who are transported to the front by hundreds of taxis.
      The Germans dig in north of the Aisne River, and the trench warfare that is to typify the Western Front for the next four years begins.
          </span>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
